logs/test-aarch64-step-hal10.txt
CC  kernel/arch/aarch64/hal.c
In file included from kernel/arch/aarch64/hal.c:7:0:
kernel/arch/aarch64/hal.c: In function 'arch_bus_scan':
kernel/include/kernel/printk.h:65:14: error: too many arguments for format [-Werror=format-extra-args]
       printk("[INFO] " fmt, ##__VA_ARGS__);                                    \
              ^
kernel/arch/aarch64/hal.c:15:5: note: in expansion of macro 'pr_info'
     pr_info("HAL: Scanning Platform Bus (MMIO)...\n", "");
     ^~~~~~~
cc1: all warnings being treated as errors
make: *** [build/aarch64/kernel/arch/aarch64/hal.o] Error 1
